cmake_minimum_required(VERSION 3.26)
project(Mumin)

set(CMAKE_CXX_STANDARD 23)

add_executable(Mumin main.cpp
        Script.cpp
        FlatData.cpp
        DataStream.cpp
        BigNum.cpp
        AutoBn.cpp
        BigNumError.cpp
        AutoFile.cpp
        Market/MarketProduct.cpp
        Market/MarketUser.cpp
        Market/MarketReview.cpp
        Market/RequestTracker.cpp
        GUI/AboutDialog.cpp
        GUI/AboutDialogBase.cpp
        GUI/AddressBookDialog.cpp
        GUI/AddressBookDialogBase.cpp
        GUI/AddressBookDialogBase.cpp
        GUI/EditProductDialog.cpp
        GUI/EditProductDialogBase.cpp
        GUI/EditReviewDialog.cpp
        GUI/EditReviewDialogBase.cpp
        GUI/GetTextFromUserDialog.cpp
        GUI/GetTextFromUserDialog.cpp
        GUI/GetTextFromUserDialogBase.cpp
        GUI/MainFrame.cpp
        GUI/MainFrameBase.cpp
        GUI/OptionsDialog.cpp
        GUI/OptionsDialogBase.cpp
        GUI/PokerDialogBase.cpp
        GUI/PokerLobbyDialogBase.cpp
        GUI/ProductsDialog.cpp
        GUI/ProductsDialogBase.cpp
        GUI/SendDialog.cpp
        GUI/SendDialogBase.cpp
        GUI/SendingDialog.cpp
        GUI/SendingDialogBase.cpp
        GUI/SendingDialogBase.cpp
        GUI/TxDetailsDialog.cpp
        GUI/TxDetailsDialogBase.cpp
        GUI/ViewOrderDialog.cpp
        GUI/ViewOrderDialogBase.cpp
        GUI/ViewProductDialog.cpp
        GUI/ViewProductDialogBase.cpp
        GUI/ViewProductDialogBase.cpp
        GUI/YourAddressDialog.cpp
        GUI/YourAddressDialogBase.cpp
        Crypto/Key.cpp
        Crypto/KeyError.cpp
        Crypto/Shafot.cpp
        Crypto/Shao.cpp
        Crypto/Shatef.cpp
        Crypto/Shatfs.cpp
        Crypto/Shattf.cpp
        Crypto/Shatfs.cpp
        Config/BaseUInt.cpp
        Config/CriticalBlock.cpp
        Config/CriticalSection.cpp
        Config/FixedFieldString.cpp
        Config/SerActionGetSerializeSize.cpp
        Config/SerActionSerialize.cpp
        Config/SerActionSerialize.cpp
        Config/SerActionUnserialize.cpp
        Config/UIntOsz.cpp
        Config/SerActionUnserialize.cpp
        Config/UIntTfz.cpp
        Config/TryCriticalBlock.cpp
        Bootstrap/Irc.cpp
        Bootstrap/NetInv.cpp
        Bootstrap/NetAddress.cpp
        Bootstrap/NetMessageHeader.cpp
        Bootstrap/Node.cpp
        BlockChain/AddressDb.cpp
        BlockChain/DB.cpp
        BlockChain/MarketDb.cpp
        BlockChain/ReviewDb.cpp
        BlockChain/Transacktion.cpp
        BlockChain/Transacktion.cpp
        BlockChain/TXDB.cpp
        BlockChain/WalletDb.cpp)
